<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Inventario">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/red"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:logo="@mipmap/logot"
        app:titleMargin="0dp"
        app:titleTextAppearance="@style/TextAppearance.AppCompat.Medium"
        app:titleTextColor="#FFFFFF" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="345dp"
        android:layout_height="670dp"
        android:gravity="center|top"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom|center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnNuevoProducto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_red_dark"
                android:text="@string/btn_nuevo" />

            <FrameLayout
                android:layout_width="10dp"
                android:layout_height="match_parent">

            </FrameLayout>

            <Button
                android:id="@+id/btnEditarProducto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_red_dark"
                android:text="@string/btn_editar" />

            <FrameLayout
                android:layout_width="10dp"
                android:layout_height="match_parent"></FrameLayout>

            <Button
                android:id="@+id/btnEliminarProducto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_red_dark"
                android:text="@string/btn_eliminar" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom|center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/inputBuscar"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/text_buscar"
                android:inputType="text" />

            <FrameLayout
                android:layout_width="10dp"
                android:layout_height="match_parent"></FrameLayout>

            <Button
                android:id="@+id/btnBuscar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_red_dark"
                android:text="@string/btn_buscar" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />
        </LinearLayout>

        <TableLayout
            android:id="@+id/tabla_productos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|start"
            android:stretchColumns="1, 2, 3, 4">

            <TableRow>

                <TextView
                    android:padding="8dp"
                    android:text="@string/head_nombre"
                    android:textStyle="bold" />

                <TextView
                    android:padding="8dp"
                    android:text="@string/head_presentacion"
                    android:textStyle="bold" />

                <TextView
                    android:padding="8dp"
                    android:text="@string/head_precio"
                    android:textStyle="bold" />

                <TextView
                    android:padding="8dp"
                    android:text="@string/head_cantidad"
                    android:textStyle="bold" />
            </TableRow>
        </TableLayout>

    </LinearLayout>

    <!-- Botón Salir posicionado fuera del LinearLayout principal -->
    <Button
        android:id="@+id/btnSalir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/design_default_color_error"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/btn_salir"
        app:icon="@drawable/salir"
        app:iconPadding="8dp"
        app:iconTint="@color/design_default_color_on_primary"
        app:iconTintMode="multiply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>