<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NuevoProducto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar4"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/red"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:logo="@mipmap/logot"
        app:titleMargin="0dp"
        app:titleTextAppearance="@style/TextAppearance.AppCompat.Medium"
        app:titleTextColor="#FFFFFF" />

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="650dp"
        android:gravity="center|top"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/tituloNuevo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_nuevo"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/holo_red_dark"
            android:textColorLink="@android:color/holo_red_dark"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/inputNuevoNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nuevo_producto_nombre"
            android:inputType="text" />

        <EditText
            android:id="@+id/inputNuevoPresentacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nuevo_producto_presentacion"
            android:inputType="text" />

        <EditText
            android:id="@+id/inputNuevoPrecioCompra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nuevo_producto_precio_compra"
            android:inputType="number" />

        <EditText
            android:id="@+id/inputNuevoPrecioVenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nuevo_producto_precio_venta"
            android:inputType="number" />

        <EditText
            android:id="@+id/inputNuevoCantidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nuevo_producto_cantidad"
            android:inputType="number" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnNuevoCancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_red_dark"
                android:text="@string/btn_cancelar" />

            <FrameLayout
                android:layout_width="15dp"
                android:layout_height="wrap_content">

            </FrameLayout>

            <Button
                android:id="@+id/btnNuevoAgregar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_green_dark"
                android:text="@string/btn_agregar" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>