<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/red"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:logo="@mipmap/logot"
        app:titleMargin="0dp"
        app:titleTextAppearance="@style/TextAppearance.AppCompat.Medium"
        app:titleTextColor="#FFFFFF" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/iniciar_sesion_texto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_formulario"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <EditText
            android:id="@+id/correoUsuario"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/input_correo"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/claveUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/input_clave"
            android:inputType="numberPassword" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/botonIngresar"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#F44336"
            android:onClick="ingresar"
            android:text="@string/btn_formulario" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>